--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Dashboard</title>
   </head>
   <style>
-    @keyframes role {
+    @keyframes roll {
       from {
         transform: rotate(0deg);
         opacity: 1;
@@ -26,7 +26,7 @@
     }
 
     .spinner {
-      animation: role 1s infinite linear;
+      animation: roll 1s infinite linear;
     }
   </style>
   <body>
