Adjust colours for confirm account notification

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       animation: roll 1s infinite linear;
     }
   </style>
-  <body>
+  <body style="overflow: none !important">
       <div id="initialLoader"
            style="position: fixed; top: 0; left: 0; z-index: 10; background: white; width: 100%;
                   height: 100%; display: flex; align-items: center; justify-content: center"
