--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
   </head>
   <style>
     @keyframes roll {
-      from {
+      0% {
         transform: rotate(0deg);
         opacity: 1;
       }
-      to {
-        transform: rotate(360deg);
+      50% {
+        transform: rotate(180deg);
         opacity: 0.5;
+      }
+      100% {
+        transform: rotate(360deg);
+        opacity: 1;
       }
     }
 
